--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,8 +7,8 @@
 }
 
 :root {
-  --FF: "Young Serif", serif;
-  --FF-HEADING: "Outfit", sans-serif;
+  --FF: "Outfit", sans-serif;
+  --FF-HEADING: "Young Serif", serif;
   --FS: 16px;
 
   --BG-COLOR-RECIPE: hsl(0, 0%, 100%);
@@ -35,6 +35,7 @@ body {
   flex-direction: column;
   font-size: var(--FS);
   justify-content: center;
+  font-family: var(--FF);
 }
 
 img {
@@ -47,11 +48,66 @@ img {
 
 ul,
 ol {
-  margin-left: 1.4rem;
+  margin-left: 1.5rem;
 }
 
 li::marker {
   color: var(--LIST-ITEM-COLOR-1);
+}
+
+li {
+  padding-left: 1rem;
+}
+
+#recipe {
+  background-color: var(--BG-COLOR-RECIPE);
+  border-radius: 1.8rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin: 6rem 0;
+  max-width: 735px;
+  padding: 2.4rem;
+}
+
+h1, h2:not(div h2) {
+  font-family: var(--FF-HEADING);
+  font-size: 1.8rem;
+  color: var(--FONT-COLOR-HEADING-3);
+  font-weight: 400;
+}
+
+h1 {
+  font-size: 2.5rem;
+  color: var(--FONT-COLOR-HEADING-1);
+}
+
+#recipe section:first-child {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+div {
+  background-color: var(--BG-COLOR-Prep-Time);
+  padding: 2rem;
+  border-radius: 1rem;
+}
+
+div h2 {
+  color: var(--FONT-COLOR-HEADING-2);
+  font-size: 1.25rem;
+}
+div h2, div strong {
+  font-weight: 600;
+}
+
+div li {
+  margin-top: 1rem;
+}
+
+div li::marker {
+  color: var(--LIST-ITEM-COLOR-2);
 }
 
 .attribution {
